--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
         <script src="/javascript/script.js"></script>
         <link rel="stylesheet" href="/css/home.css">
         <%- style %>
@@ -18,7 +19,6 @@
             <div style="margin-top: 3vw;">
                 <%- body -%>
             </div>
-            
         </main>
         <%- include('_footer') -%>
         <%- script -%>
