--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,9 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 * {
   box-sizing: border-box;
 }
+a {
+  color: black;
+}
+  
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
@@ -17,6 +22,8 @@ body {
   top: 23px;
   right: 28px;
   width: 280px;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 }
 
 /* The popup form - hidden by default */
@@ -83,12 +90,78 @@ body {
 }
 
 #view-toggler{
-  margin-top: 10px;
+  margin-top: 40px;
 }
 
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
 
 #habit-container {
-  height: 65vh;
+  height: 60vh;
   overflow-y: scroll;
 }
 
@@ -96,11 +169,46 @@ body {
   list-style-type: none;
 }
 
+#weekly-status-list{
+  display: none;
+  list-style-type: none;
+}
+
 .habit-container-item {
   border-radius: 5px;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
   margin-bottom: 10px;
-  width: 95vw;
+  width: 92vw;
   padding: 10px;
+}
+
+.habit-weekly-container-list-item{
+  border-radius: 5px;
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  margin-bottom: 10px;
+  width: 92vw;
+  padding: 15px;
+}
+
+.habit-description-weekly{
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 2px dotted black;
+}
+
+.habit-daywise-container{
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.week-day-status{
+  padding: 10px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+  width: 10vw;
+  border-radius: 5px;
+}
+#habit-container::-webkit-scrollbar {
+  display: none;
 }
 
